@@ -5,7 +5,9 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add assigned_groups method for the OGDSService.
+  It returns all assigned groups for the given userid.
+  [elioschmutz]
 
 
 2.4.2 (2016-03-17)
